src/components/styles.css
/* General styles */
h1{
  color:#0e124d;
  font-size: 2rem;
}
p{
  color:#0e124d;
}
h2{
  color:#0e124d;
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-weight: 700;
  
}
ul{padding-left:0px!important;}
li{list-style: none;}
/* styles for the menu section */
.menu {
  display: flex;
  flex-direction: column;
  width: 12rem;
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #1fffbc;
  transition: width 0.3s ease;
  overflow: auto;
  padding: 0.5rem;
  z-index: 2;
}
.menu.collapsed {
  width: 4rem;
  transition: width 0.3s ease;
}

.lesson-details{
  margin-top:1.5rem;
}
.menu.collapsed ~ .main-content {
  transition: margin-left 0.3s ease;
}
.menu.collapsed .lessons {
  display: none;
}
.hidden {
  display: none;
}
.menu-hamburger {
  font-size: 24px;
  padding: 0.5rem;
  cursor: pointer;
}
.level {
  position: relative;
  text-align: center;
  padding: 10px 0;
}
li.lesson:hover{background-color: #fff;border-radius: 5px;}
.delete-lesson {
  margin-left:0.5rem;
  cursor: pointer;
}
.delete-lesson:hover {
transform: scale(1.2);
}
  
 /* styles for the main content section */
 .main-content {
  flex: 1;
  padding: 0 1rem;
  overflow-y: auto;
  transition: margin-left 0.3s ease;
  margin-left: 4.5rem;
}
  
  .navigation-bar{
    display: flex;
    justify-content:space-evenly;
    
  }
  .search-bar-container {
    flex-grow: 1;
    flex-shrink: 0;
    display: flex;
    justify-content: center;
  }
  .search-bar {
    margin: 0.5rem;
    width:14rem;
  }
    .toggle-container{
      display: flex;
      justify-content:flex-end;
      align-items: center;
     }
  
  .fa-toggle-off{
    cursor: pointer;
    padding:5px 0;
  }
  .fa-toggle-on{
    cursor: pointer;
    padding:5px 0;
  }
  #edit-tag{
    margin-right: 3px;
    font-size:0.5rem;
  }
  @media screen and (max-width: 767px) {
    #edit-tag {
      display: none;
    }
    .search-bar {
      width: 9.5rem;
    }
    .search-icon{
      display: none;
    }
  }
 
  .add-lesson {
    margin-left: 0.5rem;
    margin-right: 0.5rem;
    border-color: #f1f1f1;
    cursor: pointer;
  }
  
   .search-result{
    width: 100%;
    text-align: center;
    padding: 8px;
   }
  .search-result:hover{
   cursor: pointer;
   background-color:#edf7ff;
   font-weight: 600;
  }
  .level-button {
    background-color: #0e124d;
    border-radius: 50%;
    width: 32px;
    height: 32px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: bold;
    color: #fff;
    margin: 0 auto;
    cursor: pointer;
    border: none;
  } 
  .level-button:hover{
    background-color: #4827ec;
  }
  
/* modal styles */
.modal {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
}

.form-container {
  display: flex;
  flex-direction: column;
}

.form-wrapper {
  display: flex;
  flex-direction: column;
}
.form-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.form-label {
  display: block;
  margin-bottom: 0.5rem;
}
.form-input {
  width: 100%;
  padding: 0.5rem;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.form-container label {
  margin-top: 0.5rem;
  margin-bottom: 5px;
}
.form-container input[type='text'],
.form-container textarea {
  margin-bottom: 0.5rem;
}
.quill{
  background-color: white;
}
.loading-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  /* Add any other styles as needed */
}
/* more form styles */
.formTitle{
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-weight: 700;
}
.formDescription{
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-weight: 700;
}
.formLevel{
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-weight: 700;
}
.app-body {
  display: flex;
  height: 100%;
  overflow: hidden;
}

